--- a/dashboard.html
+++ b/dashboard.html
@@ -117,7 +117,7 @@
                     fill="currentColor"></path>
                 </svg>
               </div>
-              <h2 class="text-[#111418] text-lg font-bold leading-tight tracking-[-0.015em]">Healthcare</h2>
+              <h2 class="text-[#111418] text-lg font-bold leading-tight tracking-[-0.015em]">Clinicly</h2>
             </div>
             <div class="flex flex-1 justify-end gap-8">
               <label class="flex flex-col min-w-40 !h-10 max-w-64">
