--- a/swipe.html
+++ b/swipe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swipe Interface</title>
+    <title>Clinicly</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -21,17 +21,17 @@
     <!-- Swipe Sections -->
     <div id="hospital-section" class="container hidden">
         <h3>Swipe to Select Hospital</h3>
-        <div id="hospital-cards"></div>
+        <div id="hospital-cards" onclick="hosp()"></div>
     </div>
 
     <div id="doctor-section" class="container hidden">
         <h3>Swipe to Select Doctor</h3>
-        <div id="doctor-cards"></div>
+        <div id="doctor-cards" onclick="doc()"></div>
     </div>
 
     <div id="room-section" class="container hidden">
         <h3>Swipe to Select Room</h3>
-        <div id="room-cards"></div>
+        <div id="room-cards" onclick="room()"></div>
     </div>
 
     <!-- Final Selection -->
